      now structures of bunny library may only be handler to real data instead
      of being real datas. The purpose of this is to save memory without having you
      to change anything in your code.

  * Edit allocator module
    - Add bunny_allocator_reset to restart completly the allocator and invalidate
      all pointers.

  * Add error module
    - Bring the t_bunny_error type that complete errno error codes.
      **Compatibility break!** as t_bunny_error was used by the network module.
    - Bring associated human readable description.
    - Bring bunny_perror, bunny_strerror, bunny_errno, etc.

  * Edit event module
    - Switch from size_t to int as return type of bunny_get_frequency.
    - Empty the event stack when leaving bunny_loop or bunny_loop_mw.
    - Add on_entering_context and on_leaving_context response function.
    - Add bunny_get_frequency to get the frequency of the main loop.
    - The t_bunny_display response function now take a non const pointer. **Compatibility break!**
    - Add a minimal movement value to call joystick axis event, to improve
      support of analogic joystick, especially in menus.
    - Add a completed asynchronous computation request event.
    - Add a C++ class to ease context integration in C++: the Bunny::Context
      and the function SetContext

  * Edit graphic module
    - Add to bunny_load_picture and bunny_load_pixelarray the ability to load
      configuration file presetting fields of their returned structure.
    - Uncipher picture files when loading them if a loading cipher function is set.
    - Turn bunny_set_circle to a macro targeting the new function bunny_set_disk.
    - Migrate gl_bunny_my_set_circle and t_bunny_my_set_circle to
      gl_bunny_my_set_disk and t_bunny_my_set_disk. **Compatibility break!**

  * Add history module
    - The history module is useful to snapshot structures and associate
      them with a specific time index. It may be especially useful when